добавил два блока в разметку

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div class="block_1">BLOCK 1</div>
     <div class="block_2">BLOCK 2</div>
+    <div class="block_3">BLOCK 3</div>
+    <div class="block_4">BLOCK 4</div>
     <script src="js/script.js"></script>
   </body>
 </html>
