--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="block_2">BLOCK 2</div>
     <div class="block_3">BLOCK 3</div>
     <div class="block_4">BLOCK 4</div>
+    <div class="block_5">BLOCK 5</div>
     <script src="js/script.js"></script>
   </body>
 </html>
